fix(slider-membership-host): fixed text spacing in slider

--- a/src/app/slider-membership-host/slider-membership-host.component.scss
+++ b/src/app/slider-membership-host/slider-membership-host.component.scss
@@ -84,7 +84,7 @@ section.host {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 30%;
-        padding: 90px 0;
+        padding: 75px 0;
 
         @at-root :host-context(.no-webp) #{&} {
             background-image: url('/assets/products/host/host.jpg');
